---
source: crates/jrsonnet-formatter/src/tests.rs
expression: "reformat(indoc!(\"\n\t\t\t{\n\t\t\t\tkubernetes: {\n\t\t\t\t deployment: {\n\t\t\t\t\tapiVersion: 'apps/v1',\n\t\t\t\t\tkind: 'Deployment',\n\t\t\t\t\tmetadata: {\n\t\t\t\t\t  name: 'myapp',\n\t\t\t\t\t  labels: { app: 'myapp', version: 'v1' },\n\t\t\t\t\t},\n\t\t\t\t\tspec: {\n\t\t\t\t\t  replicas: 3,\n\t\t\t\t\t  selector: { matchLabels: { app: 'myapp' } },\n\t\t\t\t\t  template: {\n\t\t\t\t\t\t metadata: { labels: { app: 'myapp' } },\n\t\t\t\t\t\t spec: {\n\t\t\t\t\t\t\tcontainers: [\n\t\t\t\t\t\t\t  {\n\t\t\t\t\t\t\t\t name: 'myapp',\n\t\t\t\t\t\t\t\t image: 'myapp:latest',\n\t\t\t\t\t\t\t\t ports: [{ containerPort: 8080 }],\n\t\t\t\t\t\t\t\t env: [\n\t\t\t\t\t\t\t\t\t{ name: 'FOO', value: 'bar' },\n\t\t\t\t\t\t\t\t\t{ name: 'BAZ', valueFrom: { secretKeyRef: { name: 'mysecret', key: 'password' } } },\n\t\t\t\t\t\t\t\t ],\n\t\t\t\t\t\t\t  },\n\t\t\t\t\t\t\t],\n\t\t\t\t\t\t },\n\t\t\t\t\t  },\n\t\t\t\t\t},\n\t\t\t\t },\n\t\t\t  },\n\t\t\t}\n\t\t\"))"
---
{
	kubernetes: {
		deployment: {
			apiVersion: 'apps/v1',
			kind: 'Deployment',
			metadata: {
				name: 'myapp',
				labels: { app: 'myapp', version: 'v1' },
			},
			spec: {
				replicas: 3,
				selector: { matchLabels: { app: 'myapp' } },
				template: {
					metadata: { labels: { app: 'myapp' } },
					spec: {
						containers: [
							{
								name: 'myapp',
								image: 'myapp:latest',
								ports: [
									{ containerPort: 8080 },
								],
								env: [
									{ name: 'FOO', value: 'bar' },
									{
										name: 'BAZ',
										valueFrom: { secretKeyRef: { name: 'mysecret', key: 'password' } },
									},
								],
							},
						],
					},
				},
			},
		},
	},
}
